<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/CE"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/CE"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/C"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintStart_toEndOf="@id/CE" />

    <Button
        android:id="@+id/BS"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/BS"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintStart_toEndOf="@id/C" />

    <Button
        android:id="@+id/Divide"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/divide"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintStart_toEndOf="@id/BS" />

    <Button
        android:id="@+id/seven"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/seven"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eight"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/eight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintStart_toEndOf="@id/seven" />

    <Button
        android:id="@+id/nine"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/nine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintStart_toEndOf="@id/eight" />

    <Button
        android:id="@+id/multiply"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/multiply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/nine" />

    <Button
        android:id="@+id/four"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/four"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/five"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintStart_toEndOf="@id/four" />

    <Button
        android:id="@+id/six"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/six"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/five" />

    <Button
        android:id="@+id/minus"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/minus"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintStart_toEndOf="@id/six" />

    <Button
        android:id="@+id/one"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/one"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/positive"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/two"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintStart_toEndOf="@id/one" />

    <Button
        android:id="@+id/three"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/three"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/dot"
        app:layout_constraintStart_toEndOf="@id/two" />

    <Button
        android:id="@+id/plus"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/equal"
        app:layout_constraintStart_toEndOf="@id/three" />

    <Button
        android:id="@+id/positive"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/positive"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zero"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#cccccc"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/positive" />

    <Button
        android:id="@+id/dot"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/dot"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/zero" />

    <Button
        android:id="@+id/equal"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#cccccc"
        android:text="@string/equal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="430dp"
        android:layout_height="207dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|end"
        android:text="@string/zero"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>