<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="end"
        android:text="@string/default_value"
        android:gravity="center_vertical|end"
        android:textSize="75sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_border"
        />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/CE"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/CE"
                android:textColor="#000000"
                android:textSize="20sp"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall" />
            <Button
                android:id="@+id/C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/BS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/BS"
                android:textSize="20sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/Divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/divide"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/seven"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/eight"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/nine"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/multiply"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/four"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/five"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/six"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/one"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/two"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/three"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/plus"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/positive"
                android:textSize="20sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#e5e5e5"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/zero"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/dot"
                android:textSize="27sp"
                android:textColor="#000000" />
            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:backgroundTint="#cccccc"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                android:text="@string/equal"
                android:textSize="24sp"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>